MODSOURCE-250: Make tenant API asynchronous.